[tool.poetry]
name = "USB_Quartermaster_Usbip"
version = "0.1.0"
description = "Quartermaster support for managing USBIP devices"
authors = ["Tim Laurence <timdaman@gmail.com>"]
packages = [
    {include = "USB_Quartermaster_Usbip"}
]

[tool.poetry.dependencies]
python = "^3.6"
USB_Quartermaster_common = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
